<resources>
  <string name="email_validation_icon" translatable="false">Validation icon for e-mail</string>
  <string name="name_validation_icon" translatable="false">Validation icon for name</string>
  <string name="surname_validation_icon" translatable="false">Validation icon for surname</string>
  <string name="username_validation_icon" translatable="false">Validation icon for username</string>
  <string name="password_validation_icon" translatable="false">Validation icon for password</string>
  <string name="app_name">Civify</string>
  <string name="whats_happening">What\'s happening?</string>
  <string name="issue_title">Issue Title</string>
  <string name="describe_your_issue">Describe your issue</string>
  <string name="issue_description">Issue description</string>
  <string name="what_kind_of_problem">What kind of issue?</string>
  <string name="pose_a_risk">Does it pose a risk to people?</string>
  <string name="take_a_picture">Do you have a photo of the issue?</string>
  <string name="create_new_issue">Create new issue</string>
  <string name="something_went_wrong">Something went wrong</string>
  <string name="havent_picked_image">You haven\'t picked an image!</string>
  <string name="need_to_allow_camera_permission">You need to allow camera permission to take a photo</string>
  <string name="camera_permission_denied">Camera permission denied</string>
  <string name="select_photo">Select photo</string>
  <string name="gallery_permission_denied">Read external storage permission denied</string>
  <string name="need_to_allow_read_storage_permission">You need to allow read external storage permission</string>
  <string name="must_insert_issue_title">You must insert an issue title</string>
  <string name="must_choose_photo">You must choose a photo</string>
  <string name="must_choose_option">You must choose an option</string>
  <string name="couldnt_create_issue">Couldn\'t create new issue</string>
  <string name="valid_unused_username">The username is valid and unused</string>
  <string name="invalid_username">The username is invalid (Should have 8–20 characters. Special
        characters allowed: .,)
  </string>
  <string name="used_username">The username is already used</string>
  <string name="valid_unused_email">The e-mail is valid and unused</string>
  <string name="invalid_email">The e-mail is invalid</string>
  <string name="used_email">The e-mail is already used</string>
  <string name="valid_password">The password is valid</string>
  <string name="invalid_password">
        <![CDATA[The password is invalid (Should have 8–40 characters, including at least 1 uppercase and 1 lowercase letter, 1 digit. Special characters allowed: @&#$%)]]></string>
  <string name="matching_passwords">Both passwords match</string>
  <string name="not_matching_passwords">The passwords do not match</string>
  <string name="name">Name</string>
  <string name="surname">Surname</string>
  <string name="username">Username</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="validate_password">Validate password</string>
  <string name="choose_username">Choose a username</string>
  <string name="whats_your_name">What\'s your name?</string>
  <string name="continue_button">Continue</string>
  <string name="finish">Finish</string>
  <string name="choose_password">Choose a password</string>
  <string name="choose_email">What\'s your email?</string>
  <string name="surname_not_validated">You must enter your surname</string>
  <string name="name_not_validated">You must enter your name</string>
  <string name="signInWith">Sign in with:</string>
  <string name="sign_in">Sign in</string>
  <string name="registration">Register</string>
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password (optional)</string>
  <string name="action_sign_in">Sign in or register</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="error_invalid_email">This email address is invalid</string>
  <string name="error_invalid_password">This password is too short</string>
  <string name="error_incorrect_password">This password is incorrect</string>
  <string name="error_field_required">This field is required</string>
  <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
  <string name="title_activity_basic" translatable="false">BasicActivity</string>
  <string name="title_activity_drawer" translatable="false">DrawerActivity</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="action_settings">Settings</string>
  <string name="achievements">Achievements</string>
  <string name="rewards">Rewards</string>
  <string name="wall">Wall</string>
  <string name="navigate">Navigate</string>
  <string name="about">About</string>
  <string name="settings">Settings</string>
  <string name="profile">Profile</string>
  <string name="events">Events</string>
  <string name="login_sign_in">Sign in</string>
  <string name="username_or_e_mail">Username or E-mail</string>
  <string name="login_password">Password</string>
  <string name="have_you_forgotten_your_password">Have you forgotten your password?</string>
  <string name="user_location_settings_agreed" translatable="false">User agreed to make required location settings
        changes.
  </string>
  <string name="user_location_settings_canceled" translatable="false">
    User chose not to make required location settings changes.
  </string>
  <string name="location_connection_failed">Location services connection failed.</string>
  <string name="not_implemented_yet">Not implemented yet</string>
  <string name="action" translatable="false">Action</string>
  <string name="level">Level</string>
  <string name="sign_out">Sign out</string>
  <string name="issue_name">Issue Name</string>
  <string name="save_changes">Save changes</string>
  <string name="description">Description</string>
  <string name="road_signs">Road signs</string>
  <string name="illumination">Illumination</string>
  <string name="grove">Grove</string>
  <string name="street_furniture">Street furniture</string>
  <string name="trash_and_cleaning">Trash and cleaning</string>
  <string name="public_transport">Public transport</string>
  <string name="suggestion">Suggestion</string>
  <string name="other">Other</string>
  <string name="select_category">Select category</string>
  <string name="must_choose_category">You must choose a category</string>
  <string name="need_to_allow_location_permission">You need to allow location permission</string>
  <string name="camera_error">Sorry, there was an error with the camera</string>
  <string name="gallery_error">Sorry, there was an error when getting the image</string>
  <string name="couldnt_get_location">Couldn\'t get current location</string>
  <string name="issue_created">Issue created</string>
  <string name="must_enter_a_description">You must enter a description</string>
  <string name="creating_new_issue">Creating new issue&#8230;</string>
  <string name="must_insert_description">You must enter a description</string>
  <string name="tab_label_issues">ISSUES</string>
  <string name="tab_label_badges">BADGES</string>
  <string name="tab_spec_issues">Issues</string>
  <string name="tab_spec_badges">Badges</string>
  <string name="navigate_title">Navigate</string>
  <string name="wall_title">Wall</string>
  <string name="profile_title">My profile</string>
  <string name="rewards_title">Rewards</string>
  <string name="achievements_title">Achievements</string>
  <string name="events_title">Events</string>
  <string name="settings_title">Settings</string>
  <string name="details_title">Details</string>
  <string name="share">share</string>
  <string name="category">Category</string>
  <string name="questionRisk">Poses a risk?</string>
  <string name="m">m</string>
  <string name="unconfirm">Unconfirm</string>
  <string name="confirm">Confirm</string>
  <string name="confirm_message">Issue was confirmed successfully</string>
  <string name="unconfirm_message">Issue was unconfirmed successfully</string>
  <string name="confirm_error_message">Couldn\'t confirm the issue</string>
  <string name="unconfirm_error_message">Couldn\'t unconfirm the issue</string>
  <string name="couldnt_update_issue_info">Couldn\'t get updated issue info</string>
  <string name="unreport">Unreport</string>
  <string name="report">Report</string>
  <string name="report_message">Issue was reported successfully</string>
  <string name="unreport_message">Issue was unreported successfully</string>
  <string name="report_error_message">Couldn\'t report the issue</string>
  <string name="unreport_error_message">Couldn\'t unreport the issue</string>
  <string name="unresolve">Unresolve</string>
  <string name="resolve">Resolve</string>
  <string name="resolve_message">Issue was marked as resolved successfully</string>
  <string name="unresolve_message">Issue was marked as unresolved successfully</string>
  <string name="resolve_error_message">Couldn\'t mark the issue as resolved</string>
  <string name="unresolve_error_message">Couldn\'t mark the issue as unresolved</string>
  <string name="too_far_from_issue">You\'re too far from this issue</string>
  <string name="edit_issue">Edit Issue</string>
  <string name="delete_issue">Delete Issue</string>
  <string name="delete_sure">Delete Issue?</string>
  <string name="cant_confirm_own_issue">You can\'t confirm your own issue</string>
  <string name="cant_report_own_issue">You can\'t report your own issue</string>
  <string name="cant_resolve_own_issue">You can\'t resolve your own issue</string>
  <string name="couldnt_delete_issue">Couldn\'t delete issue</string>
  <string name="couldnt_edit_issue">Couldn\'t edit issue</string>
  <string name="must_write_title_description">You must write a title and a description</string>
  <string name="unspecified_title">Unspecified title</string>
  <string name="you_have_won">You have earned:</string>
  <string name="coins_image_description" translatable="false">Coins icon</string>
  <string name="level_image_description" translatable="false">Level Up icon</string>
  <string name="congratulations">Congratulations!</string>
  <string name="couldnt_add_coins">Couldn\'t add the coins to your account.</string>
  <string name="available_rewards_tab">AVAILABLE</string>
  <string name="exchanged_rewards_tab">EXCHANGED</string>
  <string name="reward_image_is_not_available_yet">Reward image is not available yet</string>
  <string name="get_it"> Get it!</string>
  <string name="dialog_award_bought">Congratulations! You have a new award available now</string>
  <string name="ok_award" translatable="false">OK!</string>
  <string name="problem_award">Oops! Impossible exchange it. Try it again</string>
  <string name="catala" translatable="false">Català</string>
  <string name="castellano" translatable="false">Castellano</string>
  <string name="english" translatable="false">English</string>
  <string name="change_language">Change language</string>
  <string name="explanation_forgotten">We will send you a recovery link so you can set a
    new password</string>
  <string name="send_button">Submit</string>
  <string name="date_ascending">Date (ascending)</string>
  <string name="date_descending">Date (descending)</string>
  <string name="proximity">Proximity</string>
  <string name="confirm_votes">Confirm votes</string>
  <string name="unresolved">Unresolved</string>
  <string name="resolved">Resolved</string>
  <string name="all">All</string>
  <string name="yes">Yes</string>
  <string name="status">Status</string>
  <string name="select_all">Select all</string>
  <string name="deselect_all">Deselect all</string>
  <string name="no" translatable="false">No</string>
</resources>