<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="12dp"
    android:gravity="center"
    android:paddingBottom="12dp"
    >

  <RadioGroup
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingBottom="12dp">
      <RadioButton
          android:id="@+id/radio_ascending"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:text="@string/date_ascending"  />
      <RadioButton
          android:id="@+id/radio_descending"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:text="@string/date_descending" />
      <RadioButton
          android:id="@+id/radio_proximity"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:text="@string/proximity" />
      <RadioButton
          android:id="@+id/radio_confirm"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:text="@string/confirm_votes"  />
  </RadioGroup>

</LinearLayout>